--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="prop.jpg" alt="Profile Picture"></td>
+    <td> <img src="/Jarin14/cv/blob/main/prop.jpg?raw=true" alt="Profile Picture"></td>
     <td>
       <h1>Jarin Lee</h1>
       <p> <em>Controls Engineer</em> </p>
