--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="/Jarin14/cv/blob/main/prop.jpg?raw=true" alt="Profile Picture"></td>
+    <td> <img src="images/prop.jpg" alt="Profile Picture"></td>
     <td>
-      <h1>Jarin Lee</h1>
+      <h6>Jarin Lee</h6>
       <p> <em>Controls Engineer</em> </p>
     </td>
 
