--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="images/prop.jpg" alt="Profile Picture"></td>
+    <td> <img src="prop.jpg" alt="Profile Picture"></td>
     <td>
-      <h6>Jarin Lee</h6>
+      <h5>Jarin Lee</h5>
       <p> <em>Controls Engineer</em> </p>
     </td>
 
